--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -5,27 +5,38 @@
             <h2>James Johnson</h2>
             <h1>Web Developer</h1>
         </div>
-        <button class="hero-button abs-center-elements">See my work</button>
+        <a class="button hero-button abs-center-elements" href="#about-section">See my work</a>
     </div>
+    <a name="about-section"></a>
     <div class="section">
         <h2 class="text-center">About</h2>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-md-12 col-lg-6">
                 <h3 class="text-center mt-5">Who am I?</h3>
-            </div>
-            <div class="col-sm-6">
-                <h3 class="text-center mt-5">What are my skills?</h3>
-            </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col-sm-6">
-                <img class="headshot mx-auto d-block my-5" src="/public/images/headshot.png">
+                <img class="headshot mx-auto d-block my-4" src="/public/images/headshot.png">
                 <p class="text-center">
                     I am a senior at Eastern Michigan University, and formerly a web development intern with LawnGuru in Ann Arbor, MI. 
                     I have a passion for creating intuitive, responsive interfaces and fast, lightweight backends.
                 </p>
+                <div class="row">
+                    <div class="col-6">
+                        <a href="https://github.com/jnjohnson" target="_blank">
+                            <div class="social-link float-right mr-3 mt-4">
+                                <img src="../../public/images/GitHub-Mark-64px.png">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <a href="https://www.linkedin.com/in/james-johnson-jr-ab716a120/" target="_blank">
+                            <div class="social-link float-left ml-3 mt-4">
+                                <img src="../../public/images/black-linkedin-64.png">
+                            </div>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-md-12 col-lg-6">
+                <h3 class="text-center mt-5">What are my skills?</h3>
                 <div class="mt-4">
                     <h4 class="mb-2">Frontend</h4>
                     <span class="skill-box">AJAX</span>
@@ -40,7 +51,6 @@
                     <span class="skill-box">JSON</span>
                     <span class="skill-box">Markdown</span>
                     <span class="skill-box">SASS</span>
-                    <span class="skill-box">SEO</span>
                     <span class="skill-box">Web Fonts</span>
                 </div>
                 <div class="mt-4">
@@ -55,20 +65,24 @@
                     <span class="skill-box">Node JS</span>
                 </div>
                 <div class="mt-4">
-                    <h4 class="mb-2">Other Skills</h4>
+                    <h4 class="mb-2">Other Useful Skills</h4>
                     <span class="skill-box">Adobe Illustrator CC</span>
                     <span class="skill-box">Adobe Photoshop CC</span>
                     <span class="skill-box">Bash</span>
                     <span class="skill-box">C++</span>
                     <span class="skill-box">Git</span>
                     <span class="skill-box">Gulp</span>
+                    <span class="skill-box">Interpersonal Communication</span>
                     <span class="skill-box">Linux</span>
                     <span class="skill-box">Mac OS</span>
                     <span class="skill-box">NPM</span>
                     <span class="skill-box">OOP</span>
                     <span class="skill-box">Public Speaking</span>
+                    <span class="skill-box">SEO</span>
+                    <span class="skill-box">UX</span>
                     <span class="skill-box">Visual Studio Code</span>
                     <span class="skill-box">Windows</span>
+                    <span class="skill-box">Writing</span>
                 </div>
             </div>
         </div>
@@ -80,7 +94,7 @@
             <h2 class="text-center">Past Work</h2>
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="row">
+                    <div class="row work-border">
                         <div class="col-sm-6">
                             <h4>LawnGuru</h4>
                             <h5>On-demand lawn and snow service</h5>
@@ -89,7 +103,7 @@
                                 Also built a new template system for LawnGuru’s HTML Emails.
                             </p>
                             <div class="technologies">
-                                <small>Technologies</small>
+                                <p><small>Technologies</small></p>
                                 <span class="technology-box">Bootstrap</span>
                                 <span class="technology-box">Sass</span>
                                 <span class="technology-box">Gulp</span>
@@ -100,7 +114,46 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xs-12">
+                    <div class="row work-border">
+                        <div class="col-sm-6">
+                            <h4>Shopping Cart</h4>
+                            <h5>Ecommerce and inventory management application</h5>
+                            <p>
+                                As a class project, built this application from a set of specifications, requirements, and designs. 
+                                Manages the end-user expereince, order history, and administrative inventory control.
+                            </p>
+                            <div class="technologies">
+                                <p><small>Technologies</small></p>
+                                <span class="technology-box">Ajax</span>
+                                <span class="technology-box">Bootstrap</span>
+                                <span class="technology-box">Digital Ocean</span>
+                                <span class="technology-box">Handlebars</span>
+                                <span class="technology-box">Mean Stack</span>
+                                <span class="technology-box">Mongoose</span>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="bg-dark-blue">
+    <div class="container">
+        <div class="contact-section">
+            <h2 class="text-center">Contact</h2>
+            <form class="contact-form">
+                <input class="form-item mx-auto d-block py-1" type="text" placeholder="Name">
+                <input class="form-item mx-auto d-block py-1" type="email" placeholder="Email">
+                <textarea class="form-item mx-auto d-block py-1" placeholder="Your Message"></textarea>
+                <div class="submit-button-container mx-auto d-block">
+                    <button class="button submit-button" type="submit">SUBMIT</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
