--- a/Portfolio-website/public/css/src/main.scss
+++ b/Portfolio-website/public/css/src/main.scss
@@ -130,7 +130,21 @@ h1, h2, h3 {
 .work-border {
     border: 3px solid $midnight-blue;
     margin-top: 40px;
-    padding: 20px 5px;
+    padding: 20px 0px;
+}
+
+.work-link {
+    color: inherit;
+}
+
+.work-link:hover{
+    text-decoration: none;
+    color: inherit;
+}
+
+.work-thumbnail {
+    width: 500px;
+    height: 281px;
 }
 
 .technologies {
