--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -7,7 +7,7 @@
         </div>
         <a class="button hero-button abs-center-elements" href="#about-section">See my work</a>
     </div>
-    <a name="about-section"></a>
+    <a id="about-section"></a>
     <div class="section">
         <h2 class="text-center">About</h2>
         <div class="row">
@@ -66,6 +66,7 @@
                 </div>
                 <div class="mt-4">
                     <h4 class="mb-2">Other Useful Skills</h4>
+                    <span class="skill-box">Adobe XD CC</span>
                     <span class="skill-box">Adobe Illustrator CC</span>
                     <span class="skill-box">Adobe Photoshop CC</span>
                     <span class="skill-box">Bash</span>
@@ -96,8 +97,10 @@
                 <div class="col-xs-12">
                     <div class="row work-border">
                         <div class="col-sm-6">
-                            <h4>LawnGuru</h4>
-                            <h5>On-demand lawn and snow service</h5>
+                            <a class="work-link" href="https://lawnguru.co/" target="_blank">
+                                <h4>LawnGuru</h4>
+                                <h5>On-demand lawn and snow service</h5>
+                            </a>
                             <p>
                                 As an intern with LawnGuru, played a significant role in building the new frontend of the Lawnguru.co website. 
                                 Also built a new template system for LawnGuru’s HTML Emails.
@@ -105,12 +108,17 @@
                             <div class="technologies">
                                 <p><small>Technologies</small></p>
                                 <span class="technology-box">Bootstrap</span>
-                                <span class="technology-box">Sass</span>
+                                <span class="technology-box">GIT</span>
+                                <span class="technology-box">GITHUB</span>
                                 <span class="technology-box">Gulp</span>
+                                <span class="technology-box">HTML 5</span>
+                                <span class="technology-box">Sass</span>
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            
+                            <a href="https://lawnguru.co/" target="_blank">
+                                <img class="mx-auto d-block work-thumbnail" src="../../public/images/LawnGuru-home.PNG">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -121,7 +129,7 @@
                             <h5>Ecommerce and inventory management application</h5>
                             <p>
                                 As a class project, built this application from a set of specifications, requirements, and designs. 
-                                Manages the end-user expereince, order history, and administrative inventory control.
+                                Manages the end-user experience, order history, and administrative inventory control.
                             </p>
                             <div class="technologies">
                                 <p><small>Technologies</small></p>
@@ -129,6 +137,9 @@
                                 <span class="technology-box">Bootstrap</span>
                                 <span class="technology-box">Digital Ocean</span>
                                 <span class="technology-box">Handlebars</span>
+                                <span class="technology-box">HTML 5</span>
+                                <span class="technology-box">Javascript</span>
+                                <span class="technology-box">Linux</span>
                                 <span class="technology-box">Mean Stack</span>
                                 <span class="technology-box">Mongoose</span>
                             </div>
