added navigation and within page links to all sections

--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -1,4 +1,26 @@
 <div class="hero-image"></div>
+<nav class="navbar navbar-expand-lg bg-dark-gray">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="#about-section">ABOUT</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="#past-work-section">PAST WORK</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="#contact-section">CONTACT</a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link" href="#">RESUME</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="container">
     <div class="hero-section text-center">
         <div class="hero-text abs-center-elements">
@@ -89,6 +111,7 @@
         </div>
     </div>
 </div>
+<a id="past-work-section"></a>
 <div class="bg-gray">
     <div class="container">
         <div class="section">
@@ -153,11 +176,12 @@
         </div>
     </div>
 </div>
+<a id="contact-section"></a>
 <div class="bg-dark-blue">
     <div class="container">
-        <div class="contact-section">
+        <div class="contact">
             <h2 class="text-center">Contact</h2>
-            <form class="contact-form">
+            <form method="post" href="mailto:jimmy@jnjohnson.io" class="contact-form">
                 <input class="form-item mx-auto d-block py-1" type="text" placeholder="Name">
                 <input class="form-item mx-auto d-block py-1" type="email" placeholder="Email">
                 <textarea class="form-item mx-auto d-block py-1" placeholder="Your Message"></textarea>
