made changes to content orientation for smaller screens

--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -1,9 +1,8 @@
 <div class="hero-image"></div>
-<nav class="navbar navbar-expand-lg bg-dark-gray">
+<nav class="navbar navbar-dark navbar-expand-sm bg-dark-gray">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item mx-3">
@@ -33,7 +32,7 @@
     <div class="section">
         <h2 class="text-center">About</h2>
         <div class="row">
-            <div class="col-md-12 col-lg-6">
+            <div class="col-12 col-xl-6">
                 <h3 class="text-center mt-5">Who am I?</h3>
                 <img class="headshot mx-auto d-block my-4" src="/public/images/headshot.png">
                 <p class="text-center">
@@ -57,7 +56,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12 col-lg-6">
+            <div class="col-12 col-xl-6">
                 <h3 class="text-center mt-5">What are my skills?</h3>
                 <div class="mt-4">
                     <h4 class="mb-2">Frontend</h4>
@@ -117,9 +116,9 @@
         <div class="section">
             <h2 class="text-center">Past Work</h2>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-12">
                     <div class="row work-border">
-                        <div class="col-sm-6">
+                        <div class="col-12 col-xl-6">
                             <a class="work-link" href="https://lawnguru.co/" target="_blank">
                                 <h4>LawnGuru</h4>
                                 <h5>On-demand lawn and snow service</h5>
@@ -138,16 +137,16 @@
                                 <span class="technology-box">Sass</span>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-12 col-xl-6">
                             <a href="https://lawnguru.co/" target="_blank">
-                                <img class="mx-auto d-block work-thumbnail" src="../../public/images/LawnGuru-home.PNG">
+                                <img class="mx-auto d-block img-fluid work-img-thumbnail" src="../../public/images/LawnGuru-home.PNG">
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12">
+                <div class="col-12">
                     <div class="row work-border">
-                        <div class="col-sm-6">
+                        <div class="col-12 col-xl-6">
                             <h4>Shopping Cart</h4>
                             <h5>Ecommerce and inventory management application</h5>
                             <p>
@@ -167,8 +166,8 @@
                                 <span class="technology-box">Mongoose</span>
                             </div>
                         </div>
-                        <div class="col-sm-6">
-                            
+                        <div class="col-12 col-xl-6">
+                            <img class="mx-auto d-block img-fluid work-img-thumbnail" src="http://placehold.it/500x281">
                         </div>
                     </div>
                 </div>
