changed navbar collapse to toggle on medium devices, added image-fluid tag to headshot

--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -1,5 +1,5 @@
 <div class="hero-image"></div>
-<nav class="navbar navbar-dark navbar-expand-sm bg-dark-gray">
+<nav class="navbar navbar-dark navbar-expand-md bg-dark-gray">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col-12 col-xl-6">
                 <h3 class="text-center mt-5">Who am I?</h3>
-                <img class="headshot mx-auto d-block my-4" src="/public/images/headshot.png">
+                <img class="headshot mx-auto img-fluid d-block my-4" src="/public/images/headshot.png">
                 <p class="text-center">
                     I am a senior at Eastern Michigan University, and formerly a web development intern with LawnGuru in Ann Arbor, MI. 
                     I have a passion for creating intuitive, responsive interfaces and fast, lightweight backends.
