added device viewport meta-tag

--- a/Portfolio-website/views/layouts/main.handlebars
+++ b/Portfolio-website/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="QuikBot is a high-speed autopurchasing bot for the things you want." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>James Johnson Web Developer Portfolio</title>
 
     <!-- Bootstrap CSS -->
