--- a/Portfolio-website/public/css/dest/main.css
+++ b/Portfolio-website/public/css/dest/main.css
@@ -62,8 +62,11 @@ h1, h2, h3 {
   text-transform: uppercase;
   font-size: 1.5rem;
   padding: 25px 38px;
-  width: 266px;
+  width: 300px;
   bottom: 186px; }
+  @media (min-width: 1200px) {
+    .hero-button {
+      width: 266px; } }
 
 .section {
   padding: 75px 0px; }
@@ -71,9 +74,15 @@ h1, h2, h3 {
     .section {
       min-height: 100vh; } }
 
-.headshot {
-  width: 300px;
-  height: 259px; }
+@media (min-width: 767px) {
+  .headshot {
+    width: calc(300px * 1.5);
+    height: calc(259px * 1.5); } }
+
+@media (min-width: 1200px), (orientation: landscape) {
+  .headshot {
+    width: 300px;
+    height: 259px; } }
 
 .social-link {
   width: 90px;
@@ -156,16 +165,22 @@ h1, h2, h3 {
   width: 100%;
   margin-top: 70px; }
   .contact-form .form-item {
-    min-width: 500px;
+    width: 100%;
     background-color: #ebebeb;
     color: #2c2c2c;
     border: none;
     margin-bottom: 5px;
     padding-left: 15px; }
+    @media (min-width: 576px) {
+      .contact-form .form-item {
+        width: 500px; } }
 
 .submit-button-container {
-  width: 500px;
+  width: 100%;
   height: 70px; }
+  @media (min-width: 576px) {
+    .submit-button-container {
+      width: 500px; } }
 
 .submit-button {
   padding: 20px 40px;
