--- a/Portfolio-website/public/css/src/main.scss
+++ b/Portfolio-website/public/css/src/main.scss
@@ -97,8 +97,15 @@ h1, h2, h3 {
 }
 
 .headshot {
-    width: 300px;
-    height: 259px;
+    @media (min-width: 767px) {
+        width: calc(300px * 1.5);
+        height: calc(259px * 1.5);
+    }
+
+    @media (min-width: 1200px), (orientation: landscape){
+        width: 300px;
+        height: 259px;
+    }
 }
 
 .social-link {
@@ -211,19 +218,27 @@ h1, h2, h3 {
     margin-top: 70px;
 
     .form-item {
-        min-width: 500px;
+        width: 100%;
         background-color: $light-gray;
         color: $dark-gray;
 
         border: none;
         margin-bottom: 5px;
         padding-left: 15px;
+
+        @media (min-width: 576px){
+            width: 500px;
+        }
     }
 }
 
 .submit-button-container {
-    width: 500px;
+    width: 100%;
     height: 70px;
+
+    @media (min-width: 576px){
+        width: 500px;
+    }
 }
 
 .submit-button {
