--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -139,7 +139,7 @@
                         </div>
                         <div class="col-12 col-xl-6">
                             <a href="https://lawnguru.co/" target="_blank">
-                                <img class="mx-auto d-block img-fluid work-img-thumbnail" src="../../public/images/LawnGuru-home.PNG">
+                                <img class="mx-auto d-block img-fluid" src="../../public/images/LawnGuru-home.PNG">
                             </a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-xl-6">
-                            <img class="mx-auto d-block img-fluid work-img-thumbnail" src="http://placehold.it/500x281">
+                            <img class="mx-auto d-block img-fluid" src="http://placehold.it/500x281">
                         </div>
                     </div>
                 </div>
