--- a/Portfolio-website/public/css/src/main.scss
+++ b/Portfolio-website/public/css/src/main.scss
@@ -8,7 +8,9 @@
 }
 
 h1 {
-    font-size: 3rem;
+    @media (min-width: 576px){
+        font-size: 3rem;
+    }
 }
 
 h3 {
@@ -52,14 +54,26 @@ h1, h2, h3 {
 }
 
 .hero-text {
-    top: 208px;
+    top: 100px;
 
     h1 {
-        margin-top: 30px;
+        margin-top: 15px;
     }
 
     h1, h2 {
         color: white;
+    }
+
+    @media (max-height: 400px) {
+        top: 70px;
+    }
+
+    @media (min-width: 576px) and (orientation: portrait), (min-width: 992px){
+        top: 208px;
+
+        h1 {
+            margin-top: 30px;
+        }
     }
 }
 
@@ -84,11 +98,23 @@ h1, h2, h3 {
     padding: 25px 38px;
     width: 266px;
 
-    bottom: 186px;
+    bottom: 50px;
+
+    @media (max-height: 400px) {
+        bottom: 25px;
+    }
+
+    @media (min-width: 576px) and (orientation: portrait), (min-width: 992px){
+        bottom: 186px;
+    }
 }
 
 .section {
-    padding: 75px 0px;
+    padding: 48px 0px;
+
+    @media (min-width: 576px) {
+        padding: 75px 0px;
+    }
 
     @media (min-width: 1200px) {
         min-height: 100vh;
@@ -148,10 +174,15 @@ h1, h2, h3 {
 }
 
 .work-border {
-    border: 3px solid $midnight-blue;
+    border-top: 3px solid $midnight-blue;
     margin-top: 40px;
 
-    padding: 30px 0px;
+    padding: 30px 0px 0px 0px;
+
+    @media (min-width: 576px) {
+        border: 3px solid $midnight-blue;
+        padding: 30px 0px;
+    }
 
     @media (min-width: 1200px) {
         padding: 20px 0px;
@@ -165,11 +196,6 @@ h1, h2, h3 {
 .work-link:hover{
     text-decoration: none;
     color: inherit;
-}
-
-.work-img-thumbnail {
-    width: 500px;
-    height: 281px;
 }
 
 .technologies {
