--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -1,4 +1,3 @@
-<div class="hero-image"></div>
 <nav class="navbar navbar-dark navbar-expand-md bg-dark-gray">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -20,6 +19,7 @@
     </ul>
   </div>
 </nav>
+<div class="hero-image"></div>
 <div class="container">
     <div class="hero-section text-center">
         <div class="hero-text abs-center-elements">
@@ -43,14 +43,14 @@
                     <div class="col-6">
                         <a href="https://github.com/jnjohnson" target="_blank">
                             <div class="social-link float-right mr-3 mt-4">
-                                <img src="../../public/images/GitHub-Mark-64px.png">
+                                <img src="/public/images/GitHub-Mark-64px.png">
                             </div>
                         </a>
                     </div>
                     <div class="col-6">
                         <a href="https://www.linkedin.com/in/james-johnson-jr-ab716a120/" target="_blank">
                             <div class="social-link float-left ml-3 mt-4">
-                                <img src="../../public/images/black-linkedin-64.png">
+                                <img src="/public/images/black-linkedin-64.png">
                             </div>
                         </a>
                     </div>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="col-12 col-xl-6">
                             <a href="https://lawnguru.co/" target="_blank">
-                                <img class="mx-auto d-block img-fluid" src="../../public/images/LawnGuru-home.PNG">
+                                <img class="mx-auto d-block img-fluid" src="/public/images/LawnGuru-home.PNG">
                             </a>
                         </div>
                     </div>
@@ -147,8 +147,10 @@
                 <div class="col-12">
                     <div class="row work-border">
                         <div class="col-12 col-xl-6">
-                            <h4>Shopping Cart</h4>
-                            <h5>Ecommerce and inventory management application</h5>
+                            <a class="work-link" href="https://shopping-cart.jnjohnson.io/home" target="_blank">
+                                <h4>Shopping Cart</h4>
+                                <h5>Ecommerce and inventory management application</h5>
+                            </a>>
                             <p>
                                 As a class project, built this application from a set of specifications, requirements, and designs. 
                                 Manages the end-user experience, order history, and administrative inventory control.
@@ -167,7 +169,9 @@
                             </div>
                         </div>
                         <div class="col-12 col-xl-6">
-                            <img class="mx-auto d-block img-fluid" src="http://placehold.it/500x281">
+                            <a class="work-link" href="https://shopping-cart.jnjohnson.io/home" target="_blank">
+                                <img class="mx-auto d-block img-fluid" src="/public/images/Shopping-cart.PNG">
+                            </a>
                         </div>
                     </div>
                 </div>
