introduce new font for headings

--- a/Portfolio-website/views/layouts/main.handlebars
+++ b/Portfolio-website/views/layouts/main.handlebars
@@ -11,7 +11,8 @@
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    
     <link rel="stylesheet" href="/public/css/dest/main.css">
     <!--below is a script which allows IE 8 to understand HTML 5 elements.-->
 <!--[if lt IE 9]>
