--- a/Portfolio-website/public/css/dest/main.css
+++ b/Portfolio-website/public/css/dest/main.css
@@ -3,6 +3,9 @@
   margin: 0px;
   font-family: 'Open Sans', sans-serif; }
 
+h1, h2, h3, h4, h5 {
+  font-family: 'Dosis', sans-serif; }
+
 @media (min-width: 576px) {
   h1 {
     font-size: 3rem; } }
@@ -23,7 +26,8 @@ h1, h2, h3 {
 
 .navbar {
   position: absolute;
-  width: 100%; }
+  width: 100%;
+  z-index: 10; }
 
 .navbar-dark .navbar-nav .nav-link {
   color: white; }
