--- a/Portfolio-website/public/css/src/main.scss
+++ b/Portfolio-website/public/css/src/main.scss
@@ -7,6 +7,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5 {
+    font-family: 'Dosis', sans-serif;
+}
+
 h1 {
     @media (min-width: 576px){
         font-size: 3rem;
@@ -33,6 +37,7 @@ h1, h2, h3 {
 .navbar {
     position: absolute;
     width: 100%;
+    z-index: 10;
 }
 
 .navbar-dark .navbar-nav .nav-link {
