--- a/Portfolio-website/views/layouts/main.handlebars
+++ b/Portfolio-website/views/layouts/main.handlebars
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="QuikBot is a high-speed autopurchasing bot for the things you want." />
+    <meta name="description" content="The professional portfolio website for James Johnson Jr" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url"                content="https://jnjohnson.io" />
+    <meta property="og:type"               content="Website" />
+    <meta property="og:title"              content="James Johnson Web Developer Portfolio" />
+    <meta property="og:image"              content="/public/images/fb-preview-img.PNG" />
     <title>James Johnson Web Developer Portfolio</title>
 
     <!-- Bootstrap CSS -->
@@ -28,8 +32,9 @@
 <body>
     {{{body}}}
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script> -->
+    
     <script src="/public/js/scroll-effect.js" type="text/javascript"></script>
     <!-- <script src="/public/js/ajax.js" type="text/javascript"></script>
     <script src="/public/js/get-input.js" type="text/javascript"></script> -->
