fix path for facebook preview image

--- a/Portfolio-website/views/layouts/main.handlebars
+++ b/Portfolio-website/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta property="og:url"                content="https://jnjohnson.io" />
     <meta property="og:type"               content="Website" />
     <meta property="og:title"              content="James Johnson Web Developer Portfolio" />
-    <meta property="og:image"              content="/public/images/fb-preview-img.PNG" />
+    <meta property="og:image"              content="https://jnjohnson.io/public/images/fb-preview-img.PNG" />
     <title>James Johnson Web Developer Portfolio</title>
 
     <!-- Bootstrap CSS -->
