added og:description for fb links, added resume

--- a/Portfolio-website/views/layouts/main.handlebars
+++ b/Portfolio-website/views/layouts/main.handlebars
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="description" content="The professional portfolio website for James Johnson Jr" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:url"                content="https://jnjohnson.io" />
-    <meta property="og:type"               content="Website" />
-    <meta property="og:title"              content="James Johnson Web Developer Portfolio" />
-    <meta property="og:image"              content="https://jnjohnson.io/public/images/fb-preview-img.PNG" />
+    <meta property="og:url"             content="https://jnjohnson.io" />
+    <meta property="og:type"            content="Website" />
+    <meta property="og:title"           content="James Johnson Web Developer Portfolio" />
+    <meta property="og:description"     content="The professional portfolio website for James Johnson Jr" />
+    <meta property="og:image"           content="https://jnjohnson.io/public/images/fb-preview-img.PNG" />
     <title>James Johnson Web Developer Portfolio</title>
 
     <!-- Bootstrap CSS -->
