--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -14,7 +14,7 @@
         <a class="nav-link" href="#contact-section">CONTACT</a>
       </li>
       <li class="nav-item mx-3">
-        <a class="nav-link" href="#">RESUME</a>
+        <a class="nav-link" href="">RESUME</a>
       </li>
     </ul>
   </div>
@@ -26,7 +26,7 @@
             <h2>James Johnson</h2>
             <h1>Web Developer</h1>
         </div>
-        <a class="button hero-button abs-center-elements" href="#about-section">See my work</a>
+        <a class="button hero-button abs-center-elements" href="#past-work-section">See my work</a>
     </div>
     <a id="about-section"></a>
     <div class="section">
