moved documents folder to within public folder, added link to resume in navigation

--- a/Portfolio-website/views/user/index.handlebars
+++ b/Portfolio-website/views/user/index.handlebars
@@ -14,7 +14,7 @@
         <a class="nav-link" href="#contact-section">CONTACT</a>
       </li>
       <li class="nav-item mx-3">
-        <a class="nav-link" href="">RESUME</a>
+        <a class="nav-link" href="https://jnjohnson.io/public/documents/Resume.pdf">RESUME</a>
       </li>
     </ul>
   </div>
