--- a/Portfolio-website/public/css/src/main.scss
+++ b/Portfolio-website/public/css/src/main.scss
@@ -44,6 +44,17 @@ h1, h2, h3 {
     color: white;
 }
 
+.resume-link {
+    padding: 0.5rem;
+    display: block;
+    color: white;
+}
+
+.resume-link:hover{
+    color: rgba(255,255,255,.75);
+    text-decoration: none;
+}
+
 .hero-image {
     position: absolute;
     height: 100vh;
