--- a/Portfolio-website/public/css/dest/main.css
+++ b/Portfolio-website/public/css/dest/main.css
@@ -33,9 +33,12 @@ h1, h2, h3 {
   color: white; }
 
 .resume-link {
-  padding: 0.5rem;
+  padding: 0.5rem 0rem;
   display: block;
   color: white; }
+  @media (min-width: 576px) {
+    .resume-link {
+      padding: 0.5rem; } }
 
 .resume-link:hover {
   color: rgba(255, 255, 255, 0.75);
